--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,5 @@
 ---
 # defaults file for ansible-role-kubeconfig-ca
+kubeconfig_ca_userconfig: "/home/ansible/.kube/config"
+kubeconfig_ca_cert_path: "/home/ansible"
+kubeconfig_ca_user_kubeconfig: "/home/ansible/.kube/config"
