--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  role_name: kubeconfig-ca
+  role_name: kubeconfig_ca
   author: Felix Hochleitner
   namespace: gepaplexx
   description: |
