--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
   remote_user: ansible
-  become: tru
+  become: true
   roles:
-    - gepaplexx.kubeconfig-ca
+    - ../ansible-role-kubeconfig-ca
