--- a/tasks/regenerate_kubeconfig_ca.yml
+++ b/tasks/regenerate_kubeconfig_ca.yml
@@ -9,7 +9,7 @@
 - name: "extract current CA from openshift cluster"
   environment:
     KUBECONFIG: "{{ openshift_kubeconfig_file }}"
-    CERTPATH: "{{ kubeconfig_ca_cert_path }}"
+    CERTPATH: "{{ kubeconfigca_cert_path }}"
   ansible.builtin.shell:
     cmd: |
       POD=$(oc --insecure-skip-tls-verify get pods -n openshift-authentication --no-headers | cut -d " " -f1 | head -n 1)
@@ -17,50 +17,49 @@
   changed_when: true
 
 - name: Slurp ingress-ca.crt
-  slurp:
-    src: "{{ kubeconfig_ca_cert_path }}/ingress-ca.crt"
-  register: ca_cert
+  ansible.builtin.slurp:
+    src: "{{ kubeconfigca_cert_path }}/ingress-ca.crt"
+  register: kubeconfigca_cert
 
 - name: Slurp current kubeconfig
-  slurp:
+  ansible.builtin.slurp:
     src: "{{ openshift_kubeconfig_file }}"
-  register: kubeconfig
+  register: kubeconfigca_config
 
 - name: Read kubeconfig to dictionary
-  set_fact:
-    kubeconfig_content: "{{ kubeconfig['content'] | b64decode | from_yaml }}"
-
-- name: debug
-  debug:
-    msg: "{{ kubeconfig_content }}"
+  ansible.builtin.set_fact:
+    kubeconfigca_content: "{{ kubeconfigca_config['content'] | b64decode | from_yaml }}"
 
 - name: Patch kubeconfig dictionary
-  set_fact:
-    kubeconfig_data: "{{ kubeconfig_content | combine(changeddata, recursive=True) }}"
+  ansible.builtin.set_fact:
+    kubeconfigca_data: "{{ kubeconfigca_content | combine(changeddata, recursive=True) }}"
   vars:
     changeddata:
       clusters:
         - cluster:
-            server: "{{ kubeconfig_content['clusters'][0]['cluster']['server'] }}"
-            certificate-authority-data: "{{ ca_cert['content'] }}"
-          name: "{{ kubeconfig_content['clusters'][0]['name'] }}"
+            server: "{{ kubeconfigca_content['clusters'][0]['cluster']['server'] }}"
+            certificate-authority-data: "{{ kubeconfigca_cert['content'] }}"
+          name: "{{ kubeconfigca_content['clusters'][0]['name'] }}"
 
 
 - name: "Write changed kubeconfig file"
   ansible.builtin.copy:
-    content: "{{ kubeconfig_data | to_nice_yaml }}"
+    content: "{{ kubeconfigca_data | to_nice_yaml }}"
     dest: "{{ openshift_kubeconfig_file }}"
     backup: true
+    mode: "0600"
+    owner: "{{ kubeconfigca_user }}"
 
 - name: "Copy kubeconfig to userlocation"
   ansible.builtin.copy:
-    content: "{{ kubeconfig_data | to_nice_yaml }}"
-    dest: "{ kubeconfig_ca_user_kubeconfig }}"
+    content: "{{ kubeconfigca_data | to_nice_yaml }}"
+    dest: "{{ kubeconfigca_user_kubeconfig }}"
     backup: true
-
+    mode: "0600"
+    owner: "{{ kubeconfigca_user }}"
 
 - name: "delete ingress-ca.crt"
   ansible.builtin.file:
     state: absent
-    path: "{{ kubeconfig_ca_cert_path }}/ingress-ca.crt"
+    path: "{{ kubeconfigca_cert_path }}/ingress-ca.crt"
 ...
